<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="welcome_text">Пожалуй, лучший фитнес трекер в ДВФУ</string>
    <string name="welcome2_text">Созданный студентами 2-ого курса</string>
    <string name="button_text">Зарегистрироваться</string>
    <string name="welcome3_text">Уже есть аккаунт?</string>
    <string name="sex_text">Пол</string>
    <string name="registration_male_text">Мужской</string>
    <string name="registration_female_text">Женский</string>
    <string name="registration_other_text">Другое</string>
    <string name="registration_text">Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности и обработки персональных данных, а также принимаете пользовательское соглашение</string>
    <string name="password_text">Пароль</string>
    <string name="name_or_nickname_text">Имя или никнейм</string>
    <string name="login_text">Логин</string>
    <string name="repeat_password_text">Повторите пароль</string>
    <string name="enter_text">Войти</string>
    <string name="entrance_text">Вход</string>
    <string name="registration2_text">Регистрация</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="activity_text">Активность</string>
    <string name="profile_text">Профиль</string>
    <string name="my_text">Моя</string>
    <string name="users_text">Пользователей</string>
    <string name="users_text2">Пользователи</string>
    <string name="my_activity_text">Моя активность</string>
    <string name="time_for_train_text">Время потренить</string>
    <string name="_14">14 часов назад</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_comments">Комментарий</string>
    <string name="change_password_text">Изменить пароль</string>
    <string name="events_text">Выйти</string>
    <string name="old_password_text">Старый пароль</string>
    <string name="new_password_text">Новый пароль</string>
    <string name="to_accept_text">Принять</string>
    <string name="save">Сохранить</string>
    <string name="title_activity_new">NewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="go_question_text">Погнали? :)</string>
    <string name="start_text">Начать</string>
</resources>