<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".Registration">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_height="56sp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/buttonArrowBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:onClick="back"
            app:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20sp"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:text="@string/registration2_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:autoSizeMinTextSize="20sp" />
    </TableRow>
    <ScrollView
        android:layout_width="414dp"
        android:layout_height="677dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48sp"
                    android:hint="@string/login_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48sp"
                    android:hint="@string/name_or_nickname_text"
                    android:password="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:passwordToggleEnabled="true"

                >

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="48sp"
                    android:hint="@string/password_text"
                    android:password="true"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48sp"
                    android:hint="@string/repeat_password_text"
                    android:password="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/sex_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_male_text"
                    android:textColorLink="@color/primary"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorLink="@color/primary"
                    android:text="@string/registration_female_text"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButtonOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorLink="@color/primary"
                    android:text="@string/registration_other_text"
                    android:textSize="16sp" />
            </RadioGroup>

            <Button
                android:id="@+id/buttonRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/primary"
                android:fontFamily="sans-serif"
                android:textAllCaps="false"
                android:text="@string/button_text"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/registration_text"

                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>